2006-01-01 [paul]	1.9.100cvs117

	* src/gtk/authors.h
		alphabetical order

2005-12-30 [colin]	1.9.100cvs116

	* manual/advanced.xml
		Explain Pre/Post-processing differences.

2005-12-30 [colin]	1.9.100cvs115

	* src/mh.c
		Implement copy_msgs for a little optimization
	* src/imap.c
		Finish yesterday's fix

2005-12-29 [colin]	1.9.100cvs114

	* src/imap.c
		Fix occasional failure in fetching a mail over
		IMAP

2005-12-29 [cleroy]	1.9.100cvs113

	* src/compose.c
		Don't remove a draft when sending it, if it is 
		locked.

2005-12-28 [colin]	1.9.100cvs112

	* src/summaryview.c
		Fix leak for real

2005-12-28 [wwp]	1.9.100cvs111

	* doc/faq/.cvsignore
	* doc/faq/de/.cvsignore
	* doc/faq/en/.cvsignore
	* doc/faq/es/.cvsignore
	* doc/faq/fr/.cvsignore
	* doc/faq/it/.cvsignore
	* doc/manual/.cvsignore
	* doc/manual/de/.cvsignore
	* doc/manual/en/.cvsignore
	* doc/manual/es/.cvsignore
	* doc/manual/fr/.cvsignore
	* doc/manual/ja/.cvsignore
	* src/plugins/mathml_viewer/.cvsignore
		rollback revival of those files (my bad, sorry for the noise).

2005-12-28 [wwp]	1.9.100cvs110

	* src/compose.c
		fix a minor wrapping issue w/ autowrap disabled (patch by Colin).

2005-12-28 [wwp]	1.9.100cvs109

	* doc/faq/.cvsignore
	* doc/faq/de/.cvsignore
	* doc/faq/en/.cvsignore
	* doc/faq/es/.cvsignore
	* doc/faq/fr/.cvsignore
	* doc/faq/it/.cvsignore
	* doc/manual/.cvsignore
	* doc/manual/de/.cvsignore
	* doc/manual/en/.cvsignore
	* doc/manual/es/.cvsignore
	* doc/manual/fr/.cvsignore
	* doc/manual/ja/.cvsignore
	* src/plugins/mathml_viewer/.cvsignore
	* po/.cvsignore
		more files to ignore.

2005-12-24 [colin]	1.9.100cvs108

	* AUTHORS
	* src/gtk/authors.h
		Update for Werner

2005-12-24 [colin]	1.9.100cvs107

	* src/procmsg.c
		Allow NULL src_msginfo in 
		procmsg_msginfo_new_from_mimeinfo

2005-12-23 [paul]	1.9.100cvs106

	* src/plugins/pgpinline/mypgpcore.def
		add this forgotten file

2005-12-23 [cleroy]	1.9.100cvs105

	* src/mainwindow.c
		Fix missing break
