@@ -1,3 +1,8 @@
+2006-01-02 [paul]	1.9.100cvs118
+
+	* manual/keyboard.xml
+		edited
+
 2006-01-01 [paul]	1.9.100cvs117
 
 	* src/gtk/authors.h
